--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "react-complete-guide",
   "version": "0.1.0",
+  "homepage": "https://gitname.github.io/Expense-Tracker",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
-    "gh-pages": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "4.0.1",
@@ -14,12 +14,11 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +38,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://myusername.github.io/my-app"
-  
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  }
 }
