--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-complete-guide",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/Expense-Tracker",
+  "homepage": "https://devme619.github.io/Expense-Tracker",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
